# CarnivorEnzyme

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  Snakefile  environment.yml  pyproject.toml  setup.sh  temporary_TODO_42526.md
config/: config.yaml  enzyme_families.yaml  enzyme_families.yaml.tmp.41128.1776193383614  species.yaml  substrates.yaml
config/slurm/: config.yaml
tests/: conftest.py  test_convergence.py  test_docking_parse.py  test_evmutation.py  test_fetch.py  test_foldx_parse.py
webapp/: app.py
workflow/envs/: bioinfo.yaml  docking.yaml  esm.yaml  evcouplings.yaml  expression.yaml  foldx.yaml  md.yaml  qmmm.yaml  structure.yaml
workflow/rules/: alignment.smk  ancestral_structure.smk  convergence.smk  cphmd.smk  docking.smk  electrostatics.smk  esm2.smk  evmutation.smk  expression.smk  fep.smk  foldx.smk  integrate.smk  orthology.smk  phylogeny.smk  predict_structure.smk  qmmm.smk  retrieve.smk  structural_align.smk
workflow/scripts/: assess_structure.py  build_atlas.py  classify_positions.py  compare_ancestor_modern.py  compare_foldx_evmutation.py  detect_convergence.py  extract_ancestor.py  fetch_sequences.py  generate_figures.py  map_convergence.py  parse_cphmd.py  parse_docking.py  parse_fep.py  parse_foldx.py  predict_af3.py  predict_chai1.py  prepare_docking.py  quantify_expression.py  root_tree.py  run_cphmd.py  run_docking.py  run_electrostatics.py  run_evcouplings.py  run_evmutation.py  run_fep.py  run_foldx_repair.py  run_foldx_scan.py  run_qmmm.py  score_esm2.py
workflow/scripts/braker2/: 00_download_genomes.sh  (+5 more)
