[project]
name = "carnivorenzyme"
version = "0.1.0"
description = "Structural atlas of convergently evolved digestive enzymes in carnivorous plants"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Pierce Taylor", email = ""}]
dependencies = [
    "biopython>=1.84",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "click",
    "pyyaml",
    "tqdm",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
webapp = ["streamlit>=1.30", "py3Dmol"]
structure = ["chai_lab>=0.6.1"]
docking = ["meeko>=0.5", "vina>=1.2.5"]
evolution = ["evcouplings"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
